# stm32-led-rust

./: Cargo.toml  README.md
auxiliary/: Cargo.toml
src/: main.rs
