[package]
name = "aux5"
version = "0.1.0"
authors = ["wasmup <authors>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.3"     # Low level access to Cortex-M processors
panic-halt = "0.2.0"   # Set panicking behavior to halt
cortex-m-rt = "0.6.12" # Minimal runtime / startup for Cortex-M microcontrollers

# f3 = "0.6.1"         # Board Support Crate for the STM32F3DISCOVERY
[dependencies.f3]
features = ["rt"]
version = "0.6.1"
